src/test/ui/try-on-option.stderr
error[E0308]: mismatched types
  --> $DIR/try-on-option.rs:7:5
   |
LL |     x?; //~ mismatched types
   |     ^^ expected enum `std::result::Result`, found enum `std::option::Option`
   |
   = note: expected type `std::result::Result<u32, ()>`
              found type `std::option::Option<_>`

error[E0308]: mismatched types
  --> $DIR/try-on-option.rs:13:5
   |
LL |     x?; //~ mismatched types
   |     ^^ expected u32, found enum `std::option::Option`
   |
   = note: expected type `u32`
              found type `std::option::Option<_>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
